--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-	"name": "active-win",
+	"name": "xyzrr/active-win",
 	"version": "7.1.1",
 	"description": "Get metadata about the active window (title, id, bounds, owner, URL, etc). Works on macOS, Linux, Windows.",
 	"license": "MIT",
-	"repository": "sindresorhus/active-win",
+	"repository": "xyzrr/active-win",
 	"funding": "https://github.com/sponsors/sindresorhus",
 	"author": {
 		"name": "Sindre Sorhus",
