--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "active-win",
+	"name": "@xyzrr/active-win",
 	"version": "7.2.0",
 	"description": "Get metadata about the active window (title, id, bounds, owner, URL, etc). Works on macOS, Linux, Windows.",
 	"license": "MIT",
